--- a/_content/_data/globalSettings.yaml
+++ b/_content/_data/globalSettings.yaml
@@ -1,6 +1,6 @@
 siteName: Annamorphose coaching
 productionUrl: https://www.annamorphose.be
-logo: ''
+logo: /_images/annamorphose-logoxxww2.webp
 htmlHead: ''
 cssHead: ''
 languages:
@@ -12,3 +12,4 @@ languages:
     keepUrlPrefix: false
 collections:
   - services
+  - reviews
